@@ -175,9 +175,10 @@ public class ClimateMessageHandler extends AbstractMessageHandler<ListEntitiesCl
             super.registerChannel(channel, channelType);
         }
         if (rsp.getSupportedFanModesCount() > 0) {
-            ChannelType channelType = addChannelType(BindingConstants.CHANNEL_NAME_FAN_MODE, "Fan Mode", "String",
-                    rsp.getSupportedFanModesList().stream().map(val -> EnumHelper.stripEnumPrefix(val)).toList(), "%s",
-                    null);
+            ChannelType channelType = addChannelType(
+                    BindingConstants.CHANNEL_NAME_FAN_MODE, "Fan Mode", "String", rsp.getSupportedFanModesList()
+                            .stream().map(val -> EnumHelper.stripEnumPrefix(val)).collect(Collectors.toList()),
+                    "%s", null);
 
             Channel channel = ChannelBuilder
                     .create(new ChannelUID(handler.getThing().getUID(), BindingConstants.CHANNEL_NAME_FAN_MODE))
@@ -187,7 +188,7 @@ public class ClimateMessageHandler extends AbstractMessageHandler<ListEntitiesCl
         }
         if (rsp.getSupportedCustomFanModesCount() > 0) {
             ChannelType channelType = addChannelType(BindingConstants.CHANNEL_NAME_CUSTOM_FAN_MODE, "Custom Fan Mode",
-                    "String", rsp.getSupportedCustomFanModesList().stream().toList(), "%s", null);
+                    "String", rsp.getSupportedCustomFanModesList().stream().collect(Collectors.toList()), "%s", null);
 
             Channel channel = ChannelBuilder
                     .create(new ChannelUID(handler.getThing().getUID(), BindingConstants.CHANNEL_NAME_CUSTOM_FAN_MODE))
@@ -197,9 +198,9 @@ public class ClimateMessageHandler extends AbstractMessageHandler<ListEntitiesCl
         }
         if (rsp.getSupportedPresetsCount() > 0) {
             ChannelType channelType = addChannelType(rsp.getObjectId() + "_" + BindingConstants.CHANNEL_NAME_PRESET,
-                    "Preset", "String",
-                    rsp.getSupportedPresetsList().stream().map(val -> EnumHelper.stripEnumPrefix(val)).toList(), "%s",
-                    null);
+                    "Preset", "String", rsp.getSupportedPresetsList().stream()
+                            .map(val -> EnumHelper.stripEnumPrefix(val)).collect(Collectors.toList()),
+                    "%s", null);
             Channel channel = ChannelBuilder
                     .create(new ChannelUID(handler.getThing().getUID(), BindingConstants.CHANNEL_NAME_PRESET))
                     .withLabel("Preset").withKind(ChannelKind.STATE).withType(channelType.getUID())
@@ -209,7 +210,7 @@ public class ClimateMessageHandler extends AbstractMessageHandler<ListEntitiesCl
         if (rsp.getSupportedCustomPresetsCount() > 0) {
             ChannelType channelType = addChannelType(
                     rsp.getObjectId() + "_" + BindingConstants.CHANNEL_NAME_CUSTOM_PRESET, "Custom Preset", "String",
-                    rsp.getSupportedCustomPresetsList().stream().toList(), "%s", null);
+                    rsp.getSupportedCustomPresetsList().stream().collect(Collectors.toList()), "%s", null);
             Channel channel = ChannelBuilder
                     .create(new ChannelUID(handler.getThing().getUID(), BindingConstants.CHANNEL_NAME_CUSTOM_PRESET))
                     .withLabel("Custom Preset").withKind(ChannelKind.STATE).withType(channelType.getUID())
@@ -218,8 +219,8 @@ public class ClimateMessageHandler extends AbstractMessageHandler<ListEntitiesCl
         }
         if (rsp.getSupportedSwingModesCount() > 0) {
             ChannelType channelType = addChannelType(rsp.getObjectId() + "_" + BindingConstants.CHANNEL_NAME_SWING_MODE,
-                    "Swing Mode", "String",
-                    rsp.getSupportedSwingModesList().stream().map(val -> EnumHelper.stripEnumPrefix(val)).toList(),
+                    "Swing Mode", "String", rsp.getSupportedSwingModesList().stream()
+                            .map(val -> EnumHelper.stripEnumPrefix(val)).collect(Collectors.toList()),
                     "%s", null);
             Channel channel = ChannelBuilder
                     .create(new ChannelUID(handler.getThing().getUID(), BindingConstants.CHANNEL_NAME_SWING_MODE))
